# zanzo

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  instagram-recall-spec.md
.firecrawl/: awwwards.json  (+3 more)
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29b258f63239_initial_schema.py  56bbf504f257_v2_transcript_provider_resources_.py  7a1c9d4e2f01_users_and_multitenancy.py  8b2d0e5f3a12_bot_accounts.py  9c3e1f6a4b23_item_dm_sender.py
backend/fixtures/: generic_xma_link.json  generic_xma_postback.json  pending_inbox.json
backend/recall/: auth.py  categories.py  config.py  db.py  models.py  queueing.py  schedule.py  state.py  storage.py
backend/recall/ai/: gemini.py  prompts.py  transcription.py
backend/recall/api/: deps.py  main.py  routes_actions.py  routes_admin.py  routes_auth.py  routes_items.py  schemas.py  search.py
backend/recall/instagram/: bots.py  client.py  dms.py  saved.py  types.py
backend/recall/pipeline/: ai_stages.py  cta.py  fetch.py  runner.py  transcribe.py  visual.py
backend/recall/services/: engagement.py  poller.py  worker.py
backend/scripts/: dedupe_items.py  reset_password.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_bots.py  test_classify_extract.py  test_client.py  test_config.py  test_cta.py  test_dedupe.py  test_dms_parsing.py  test_engagement.py  test_models.py  test_pipeline_runner.py  test_poller.py  test_queueing.py  test_resources_api.py  test_schedule.py  test_storage.py  test_transcription.py  test_visual.py
(+24 files in other folders)
